--- a/MayBay/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/MayBay/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -78,7 +78,7 @@
                         <a class="nav-link" href="@Url.Action("Index","ChuyenBays")"><i class="bi bi-receipt-cutoff"></i> Quản lý Chuyến Bay</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="@Url.Action("Index","MayBays")"> <i class="bi bi-book"></i> Quản lý Máy Bay</a>
+                        <a class="nav-link" href="@Url.Action("Index","HangHangKhongs")"> <i class="bi bi-book"></i> Quản lý Hãng Bay</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="@Url.Action("Index","TuyenBays")"> <i class="bi bi-book"></i> Quản lý Tuyến Bay</a>
