--- a/MayBay/Views/KhachHang/DSachCB.cshtml
+++ b/MayBay/Views/KhachHang/DSachCB.cshtml
@@ -139,7 +139,7 @@
                     <div class="room-card">
                         <img class="card-img-top hotel-picture" src="~/hinh/@chuyenBay.HinhAnh" alt=" Image 1">
                         <p class="card-text">Mã Chuyến Bay: @chuyenBay.MaCB</p>
-                        <p class="card-text">Mã Máy Bay: @chuyenBay.MaMB</p>
+                        <p class="card-text">Mã Hãng Bay: @chuyenBay.MaHangHang</p>
                         <p class="card-text">Mã Tuyến Bay: @chuyenBay.MaTBay</p>
                         <p class="card-text">Ngày Giờ: @chuyenBay.NgayGio</p>
                         <a class="btn btn-primary" href="@Url.Action("AddTicketToCart", "Cart", new { MaCB = chuyenBay.MaCB })" onclick="redirectToCart()">
