--- a/MayBay/Areas/Admin/Views/HangHangKhongs/Index.cshtml
+++ b/MayBay/Areas/Admin/Views/HangHangKhongs/Index.cshtml
@@ -1,11 +1,10 @@
-﻿@using MayBay.Models
-@inherits System.Web.Mvc.WebViewPage<List<TuyenBay>>
+﻿@model List<MayBay.Models.HangHangKhong>
 
 @{
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-pdKg0WXWNAdn4IVpvjPRzPqyp+22Vj4J6VFI4FxCk99i3LepJcE5r7Q1pAMarPr/RmuOsAxVQkD0Dh7+L4Zww=="
-      crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-pdKg0WXWNAdn4IVpvjPRzPqyp+22Vj4J6VFI4FxCk99i3LepJcE5r7Q1pAMarPr/RmuOsAxVQkD0Dh7+L4Zww==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 <style>
     body {
@@ -39,7 +38,7 @@
         }
 
     .card {
-        width: 18rem;
+        width: 22rem;
         height: 100%;
         margin-bottom: 20px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -64,32 +63,25 @@
         flex: 1 1 auto;
     }
 
-    .hotel-image {
-        width: 100%;
-        height: auto;
-        margin-bottom: 10px;
-        border-radius: 4px;
-    }
-
-    .hotel-details {
-        font-size: 18px;
-        margin-bottom: 5px;
-    }
-
     .card-footer {
         flex: 0 0 auto;
         padding: 15px;
         border-bottom-left-radius: 8px;
         border-bottom-right-radius: 8px;
     }
+    .card-body .hotel-image {
+        max-width: 100%;
+        max-height: 100%;
+        object-fit: contain;
+    }
 </style>
 
 <div class="list-title">
-    <h1>Danh Sách Tuyến Bay </h1>
-</div>
+    <h1>Danh Sách Hãng Hàng Không</h1>
+</div> 
 
 <p>
-    @Html.ActionLink("Thêm Tuyến Bay mới", "Create", null, new { @class = "btn btn-primary" })
+    @Html.ActionLink("Thêm Hãng Hàng Không mới", "Create", null, new { @class = "btn btn-primary" })
 </p>
 
 <div class="row">
@@ -98,18 +90,21 @@
         <div class="col-md-4">
             <div class="card">
                 <div class="card-header">
-                    <a>Mã Tuyến Bay: </a>
-                    @Html.DisplayFor(modelItem => item.MaTBay)
+                    @Html.DisplayFor(modelItem => item.TenHH)
                 </div>
                 <div class="card-body">
+                    <img src="/hinh/@item.HinhAnh" alt="@item.HinhAnh" class="hotel-image" />
                     <div class="hotel-details">
-                        Xuất Phát Từ: <br> @Html.DisplayFor(modelItem => item.SanBayDen) Đến @Html.DisplayFor(modelItem => item.SanBayDi)
+                        <label>Tên Hãng Hàng Không:</label> @Html.DisplayFor(modelItem => item.TenHH)
+                    </div>
+                    <div class="hotel-details">
+                        <label>Mã Hãng Hàng Không:</label> @Html.DisplayFor(modelItem => item.MaHangHang)
                     </div>
                 </div>
                 <div class="card-footer">
                     <div class="action-links">
-                        @Html.ActionLink("Chỉnh sửa", "Edit", new { id = item.MaTBay }, new { @class = "btn btn-outline-primary" }) |
-                        @Html.ActionLink("Xóa", "Delete", new { id = item.MaTBay }, new { @class = "btn btn-outline-danger" }) |
+                        @Html.ActionLink("Chỉnh sửa", "Edit", new { id = item.MaHangHang }, new { @class = "btn btn-outline-primary" }) |
+                        @Html.ActionLink("Xóa", "Delete", new { id = item.MaHangHang }, new { @class = "btn btn-outline-danger" }) |
                     </div>
                 </div>
             </div>
