--- a/MayBay/Areas/Admin/Views/TuyenBays/Delete.cshtml
+++ b/MayBay/Areas/Admin/Views/TuyenBays/Delete.cshtml
@@ -18,7 +18,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.hotel_name)
+            @Html.DisplayFor(model => model.MaTBay)
         </dd>
 
     </dl>
