--- a/MayBay/Views/Cart/LichSuDatHang.cshtml
+++ b/MayBay/Views/Cart/LichSuDatHang.cshtml
@@ -41,7 +41,7 @@
     }
 </style>
 
-@{ ViewBag.Title = "HienThiGioHang"; Layout = "~/Views/Shared/_3.cshtml"; }
+@{ ViewBag.Title = "LichSuDatHang"; Layout = "~/Views/Shared/_3.cshtml"; }
 
 <!DOCTYPE html>
 <html>
@@ -59,7 +59,6 @@
                 <th>Người đặt</th>
                 <th>Số điện thoại</th>
 
-                <th>CCCD</th>
                 <th>Email</th>
 
                 <th>Ngày đặt: </th>
@@ -75,7 +74,6 @@
             <td>@item.MaCB</td>
             <td>@item.Customer.full_name</td>
             <td>@item.Customer.phone_number</td>
-            <td>@item.Customer.CCCD</td>
             <td>@item.Customer.email</td>
             <td>@DateTime.Now.ToShortDateString()</td>
             <td>@item.trang_thai</td>
